--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi primera página</title>
+</head>
 <body>
-  <h1>NAME ISRAEL NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <h1>Israel Navarro</h1>
+    <p>I'm learning to code on Codecademy! My goal include:</p>
+    <ul>
+        <li>Learn to code</li>
+        <li>Start a company</li>
+        <li>Help the world</li>
+    </ul>
+    <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
 </body>
- 
 </html>
